# BERTtimeStories

./: .gitignore  README.md  install_eval.sh  pyproject.toml  requirements.txt
baby_lm/: convert_HF.py  create_tokenizer.py  train.py  train_config.py  train_utils.py
baby_lm/encoder/: dataset.py  ltg_config.py  ltg_model.py
baby_lm/generator/: calculate_self_bleu_nucleus_k.py  calculate_self_bleu_per_model.py  dataset.py  sample.py  sample_utils.py
baby_lm/process_data/: _prepare_babylm_data_encoder.py  _prepare_joint_training_data_encoder.py  _prepare_tinystories_data_decoder.py  _prepare_tinystories_data_encoder.py  _prepare_utils.py  cache_baby_lm.py  cache_tiny_stories.py  normalize.py  process_baby_lm.py  process_tiny_stories.py  segment.py
configs/models/gpt-neo/: base.yaml  dropout_1.yaml  dropout_2.yaml  dropout_3.yaml  dropout_4.yaml  test.yaml
configs/models/ltg-bert/: base.yaml  small.yaml  test.yaml  xs.yaml
configs/preprocess/babylm/: babylm_train_100m.yaml  babylm_train_10m.yaml
configs/preprocess/joint/: baby50m_tiny50m_greedy.yaml  baby50m_tiny50m_nogen.yaml  baby50m_tiny50m_nucleus1.yaml  baby50m_tiny50m_nucleus10.yaml  baby50m_tiny50m_nucleus5.yaml  baby5m_tiny5m_greedy.yaml  (+4 more)
data/prompts/: example.yaml  paper_figure.yaml  tinystories_evaluation.yaml
evaluation_files/: collect_results.py  evaluate_all.py  finetune_classification.py  install.sh  ltg_bert_glue_config_finetune.yaml  models.yaml  score_predictions.py  task.py
scripts_slurm/: run_experiment.py  srun_script_template.slurm  srun_script_template_multi_gpu.slurm
(+55 files in other folders)
