[tool.poetry]
name = "baby-lm"
version = "0.1.0"
description = ""
authors = ["nikitas-theo <nikitastheodorop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.3"
torch = "^2.3.1"
ftfy = "^6.2.0"
sacremoses = "^0.1.1"
smart-open = "^7.0.4"
nltk = "^3.8.1"
torchinfo = "^1.8.0"
datasets = "^2.20.0"
wandb = "^0.17.4"
jsonargparse = "^4.31.0"
minicons = "^0.2.45"
bitsandbytes = "^0.43.3"
evaluate = "^0.4.2"
tabulate = "^0.9.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
